--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: password
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    volumes:
+      - ../backend:/app # 🔥 Montea el código fuente en el contenedor
+      - ~/.m2:/root/.m2 # 🔥 Cachea dependencias Maven para evitar descargas repetidas
     networks:
       - tfg_network
 
@@ -55,11 +58,8 @@ services:
     ports:
       - "8081:80"
     environment:
-    MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-    MYSQL_DATABASE: ${MYSQL_DATABASE}
-    MYSQL_USER: ${MYSQL_USER}
-    MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: root
     depends_on:
       - mysql
     networks:
@@ -67,6 +67,7 @@ services:
 
 volumes:
   mysql_data:
+
 
 networks:
   tfg_network:
