--- a/docker/Dockerfile-frontend
+++ b/docker/Dockerfile-frontend
@@ -1,17 +1,9 @@
-# Usa la imagen oficial de Node.js 22
 FROM node:22
 
-# Define el directorio de trabajo dentro del contenedor
 WORKDIR /app
 
-# Copia los archivos del proyecto Angular al contenedor
-COPY frontend/ .
+# Instalamos Angular CLI global
+RUN npm install -g @angular/cli
 
-# Instalar dependencias
-RUN npm install
-
-# Exponer el puerto 4200
-EXPOSE 4200
-
-# Iniciar el servidor Angular en 0.0.0.0
-CMD ["npm", "run", "start", "--", "--host", "0.0.0.0"]
+# CMD que instala dependencias y arranca el server
+CMD ["sh", "-c", "npm install && npm run start -- --host 0.0.0.0"]
