--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.4.9",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.21.2",
     "tslib": "^2.3.0",
