--- a/docker/Dockerfile-frontend
+++ b/docker/Dockerfile-frontend
@@ -1,9 +1,16 @@
+# Dockerfile-frontend
+
 FROM node:22
 
 WORKDIR /app
 
-# Instalamos Angular CLI global
-RUN npm install -g @angular/cli
+COPY ../frontend/package*.json ./
 
-# CMD que instala dependencias y arranca el server
-CMD ["sh", "-c", "npm install && npm run start -- --host 0.0.0.0"]
+RUN npm install -g @angular/cli
+RUN npm install
+
+COPY ../frontend .
+
+EXPOSE 4200
+
+CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200", "--disable-host-check"]
