--- a/docker/Dockerfile-frontend
+++ b/docker/Dockerfile-frontend
@@ -1,16 +1,19 @@
-# Dockerfile-frontend
-
+# Imagen base de Node
 FROM node:22
 
+# Carpeta de trabajo dentro del contenedor
 WORKDIR /app
 
-COPY ../frontend/package*.json ./
+# Copiar los archivos necesarios para instalar dependencias
+COPY frontend/package*.json ./
 
-RUN npm install -g @angular/cli
+# Instalar dependencias de Angular (npm install)
 RUN npm install
 
-COPY ../frontend .
+# Copiar el resto del código fuente
+COPY frontend/ .
 
+# Exponer el puerto del servidor Angular
 EXPOSE 4200
 
 CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200", "--disable-host-check"]
