--- a/docker/Dockerfile-frontend
+++ b/docker/Dockerfile-frontend
@@ -1,13 +1,17 @@
 FROM node:22
 
-# Carpeta de trabajo en el contenedor
 WORKDIR /app
 
-# Angular CLI global
-RUN npm install -g @angular/cli
+# Copiamos los archivos para instalar dependencias
+COPY ../frontend/package*.json ./
 
-# Exponer puerto 4200 para Angular
+# Instalamos Angular CLI y dependencias
+RUN npm install -g @angular/cli
+RUN npm install
+
+# Copiamos el resto del proyecto
+COPY ../frontend .
+
 EXPOSE 4200
 
-# Ejecutar ng serve sobre tu código montado
 CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200"]
